# GoogleAutoComplete

./: .gitignore  README.md  cli.py  requirements.txt
cpp/: CMakeLists.txt  main.cpp
cpp/include/: DataParser.h  Line.h  Score.h  Suggester.h  Word.h
cpp/src/: DataParser.cpp  Score.cpp  Suggester.cpp  Word.cpp
ds/: checking.py
finder/: data_processing.py  main.py  scoring.py
